# htmlt-presentation

./: .gitignore  8.6.0.nix  htmlt-presentation.cabal
src/: Assets.hs  Life.hs  Slides.hs  Utils.hs  htmlt-presentation.hs
